--- a/embernet.ipynb
+++ b/embernet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +218,13 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fire_data = pd.read_csv(\"./data/merged_full.csv\")\n",
+    "fire_data = pd.read_csv(\"./data/merged_average.csv\")\n",
     "fire_data.head()"
    ]
   },
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "fire_data.columns"
+    "fire_da"
    ]
   },
   {
