--- a/fireforce_V2.ipynb
+++ b/fireforce_V2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import geopandas as gpd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "[21926 rows x 19 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
        "[21926 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
        "3173"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
        "       2009., 2011., 2013., 2015., 2017., 2018., 2019., 2021., 2022.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
        "       2020, 2012, 2006, 2003, 2016, 2017, 2019, 2001, 2015, 2000])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1667,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1717,7 @@
        "Name: ALARM_DATE, Length: 21926, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
        "Name: CONT_DATE, Length: 21926, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2408,10 +2408,10 @@
      "text": [
       "/Users/otaira/.pyenv/versions/3.12.2/envs/emberalert/lib/python3.12/site-packages/pyproj/crs/crs.py:141: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
       "  in_crs_string = _prepare_from_proj_string(in_crs_string)\n",
-      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_79760/1143485156.py:6: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_80830/1143485156.py:6: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  merged_fire_geo['latitude'] = merged_fire_geo.centroid.y\n",
-      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_79760/1143485156.py:7: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_80830/1143485156.py:7: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
       "  merged_fire_geo['longitude'] = merged_fire_geo.centroid.x\n",
       "/Users/otaira/.pyenv/versions/3.12.2/envs/emberalert/lib/python3.12/site-packages/pyproj/crs/crs.py:141: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
@@ -2438,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2824,7 +2824,7 @@
        "[1201 rows x 26 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2835,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3074,7 +3074,7 @@
        "[31168 rows x 12 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3085,16 +3085,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_79760/1704323614.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_80830/1704323614.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  merged_fire_geo['ALARM_DATE'] = pd.to_datetime(merged_fire_geo['ALARM_DATE'], errors='coerce')\n",
-      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_79760/1704323614.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_80830/1704323614.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  merged_fire_geo['CONT_DATE'] = pd.to_datetime(merged_fire_geo['CONT_DATE'], errors='coerce')\n",
       "/Users/otaira/.pyenv/versions/3.12.2/envs/emberalert/lib/python3.12/site-packages/geopandas/array.py:365: UserWarning: Geometry is in a geographic CRS. Results from 'sjoin_nearest' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
       "\n",
@@ -3115,7 +3115,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3134,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3143,7 +3143,7 @@
        "16695"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3154,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3171,7 +3171,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3186,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3195,7 +3195,7 @@
        "0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3209,9 +3209,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_80830/3587920976.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pm_cali['date_parsed'] = pd.to_datetime(pm_cali['date'], format='%d%b%Y')\n",
+      "/var/folders/bb/bc8ww5jx0kgdhn7fznlq1nqc0000gn/T/ipykernel_80830/3587920976.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  pm_cali['month'] = pm_cali['date_parsed'].dt.month\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>date</th>\n",
+       "      <th>statefips</th>\n",
+       "      <th>countyfips</th>\n",
+       "      <th>ctfips</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>ds_pm_pred</th>\n",
+       "      <th>ds_pm_stdd</th>\n",
+       "      <th>date_parsed</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10645</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>31DEC2011</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6001</td>\n",
+       "      <td>6001400100</td>\n",
+       "      <td>37.86754</td>\n",
+       "      <td>-122.23181</td>\n",
+       "      <td>8.143539</td>\n",
+       "      <td>4.009139</td>\n",
+       "      <td>2011-12-31</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10646</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>31DEC2011</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6001</td>\n",
+       "      <td>6001400200</td>\n",
+       "      <td>37.84817</td>\n",
+       "      <td>-122.24948</td>\n",
+       "      <td>8.116514</td>\n",
+       "      <td>3.971881</td>\n",
+       "      <td>2011-12-31</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10647</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>31DEC2011</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6001</td>\n",
+       "      <td>6001400300</td>\n",
+       "      <td>37.84056</td>\n",
+       "      <td>-122.25442</td>\n",
+       "      <td>8.083649</td>\n",
+       "      <td>3.933703</td>\n",
+       "      <td>2011-12-31</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10648</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>31DEC2011</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6001</td>\n",
+       "      <td>6001400400</td>\n",
+       "      <td>37.84801</td>\n",
+       "      <td>-122.25752</td>\n",
+       "      <td>8.180107</td>\n",
+       "      <td>4.215300</td>\n",
+       "      <td>2011-12-31</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10649</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>31DEC2011</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6001</td>\n",
+       "      <td>6001400500</td>\n",
+       "      <td>37.84853</td>\n",
+       "      <td>-122.26480</td>\n",
+       "      <td>8.125882</td>\n",
+       "      <td>4.103174</td>\n",
+       "      <td>2011-12-31</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       year       date  statefips  countyfips      ctfips  latitude  \\\n",
+       "10645  2011  31DEC2011          6        6001  6001400100  37.86754   \n",
+       "10646  2011  31DEC2011          6        6001  6001400200  37.84817   \n",
+       "10647  2011  31DEC2011          6        6001  6001400300  37.84056   \n",
+       "10648  2011  31DEC2011          6        6001  6001400400  37.84801   \n",
+       "10649  2011  31DEC2011          6        6001  6001400500  37.84853   \n",
+       "\n",
+       "       longitude  ds_pm_pred  ds_pm_stdd date_parsed  month  \n",
+       "10645 -122.23181    8.143539    4.009139  2011-12-31     12  \n",
+       "10646 -122.24948    8.116514    3.971881  2011-12-31     12  \n",
+       "10647 -122.25442    8.083649    3.933703  2011-12-31     12  \n",
+       "10648 -122.25752    8.180107    4.215300  2011-12-31     12  \n",
+       "10649 -122.26480    8.125882    4.103174  2011-12-31     12  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pm = pd.read_csv(\"./data/Daily_Census_Tract-Level_PM2.5_Concentrations__2011-2014_20240413.csv\")\n",
     "pm_cali = pm[pm[\"statefips\"]== 6]\n",
