--- a/fireforce_V2.ipynb
+++ b/fireforce_V2.ipynb
@@ -2419,6 +2419,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "V. Aggregating PM 2.5 Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 228,
    "metadata": {},
@@ -2723,7 +2730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "V. Categorizing the latitude and longitude points into county names and fips"
+    "VI. Categorizing the latitude and longitude points into county names and fips"
    ]
   },
   {
@@ -3082,6 +3089,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VII. Aggregating Wildfires Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 235,
    "metadata": {},
@@ -3287,6 +3301,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "VIII. Merging Aggregated Wildfires and PM 2.5 Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 236,
    "metadata": {},
@@ -3302,6 +3323,13 @@
    "outputs": [],
    "source": [
     "merged_avg.to_csv('./data/merged_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "IX. Visualizations"
    ]
   },
   {
@@ -3392,6 +3420,13 @@
    ],
    "source": [
     "plt.scatter(merged_avg['GIS_ACRES'], merged_avg['ds_pm_pred'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "X. GLM Predictions"
    ]
   },
   {
@@ -3503,6 +3538,13 @@
     "glm_model = sm.GLM(y, X, family=sm.families.Gamma(link=sm.families.links.Log()))\n",
     "glm_results = glm_model.fit()\n",
     "print(glm_results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "XI.Random Forest Predictions"
    ]
   },
   {
